--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,25 @@
 [tool.poetry]
 name = "sinaspider"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["Bao Hengtao <baohengtao@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+loguru = "^0.5.3"
+python-baseconv = "^1.2.2"
+dataset = "^1.5.0"
+requests = "^2.26.0"
+Unipath = "^1.1"
+pendulum = "^2.1.2"
+PyExifTool = "^0.4.11"
+lxml = "^4.6.3"
+
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+jupyterlab = "*"
+JLDracula = "*"
+jupyterlab_vim = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
