--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,20 +6,23 @@ authors = ["Bao Hengtao <baohengtao@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-loguru = "^0.5.3"
-python-baseconv = "^1.2.2"
-dataset = "^1.5.0"
 requests = "^2.26.0"
-Unipath = "^1.1"
-pendulum = "^2.1.2"
-PyExifTool = "^0.4.11"
 lxml = "^4.6.3"
+loguru = "^0.5.3"
+pendulum = "^2.1.2"
+psycopg2 = "^2.9.1"
+dataset = "^1.5.0"
+python-baseconv = "^1.2.2"
+PyExifTool = "^0.4.11"
 
 
 [tool.poetry.dev-dependencies]
 jupyterlab = "*"
 JLDracula = "*"
 jupyterlab_vim = "*"
+ptpython = "*"
+jupyterlab-lsp = "*"
+python-lsp-server = "^1.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
