--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ jupyterlab_vim = "*"
 ptpython = "*"
 jupyterlab-lsp = "*"
 python-lsp-server = "^1.2.1"
+Sphinx = "^4.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
