--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sinaspider"
-version = "0.2.0"
+version = "0.3.1a"
 description = ""
 authors = ["Bao Hengtao <baohengtao@users.noreply.github.com>"]
 
@@ -14,6 +14,13 @@ psycopg2 = "^2.9.1"
 dataset = "^1.5.0"
 python-baseconv = "^1.2.2"
 PyExifTool = "^0.4.11"
+keyring = "^23.1.0"
+configobj = "^5.0.6"
+furl = "^2.1.2"
+requests-cache = "^0.7.4"
+SQLAlchemy-Utils = "^0.37.8"
+bs4 = "^0.0.1"
+tqdm = "^4.62.2"
 
 
 [tool.poetry.dev-dependencies]
