--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sinaspider"
-version = "0.3.1a"
+version = "0.3.3"
 description = ""
 authors = ["Bao Hengtao <baohengtao@users.noreply.github.com>"]
 
@@ -21,6 +21,7 @@ requests-cache = "^0.7.4"
 SQLAlchemy-Utils = "^0.37.8"
 bs4 = "^0.0.1"
 tqdm = "^4.62.2"
+click = "^8.0.1"
 
 
 [tool.poetry.dev-dependencies]
@@ -32,6 +33,9 @@ jupyterlab-lsp = "*"
 python-lsp-server = "^1.2.1"
 Sphinx = "^4.1.2"
 
+[tool.poetry.scripts]
+weibo-refresh = 'sinaspider.script.test:main'
+
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.0.0", 'setuptools', 'wheel']
 build-backend = "poetry.core.masonry.api"
