--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ python-lsp-server = "^1.2.1"
 Sphinx = "^4.1.2"
 
 [tool.poetry.scripts]
-weibo-refresh = 'sinaspider.script.test:main'
+sinaspider = 'sinaspider.script:script'
 
 [build-system]
 requires = ["poetry-core>=1.0.0", 'setuptools', 'wheel']
