--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sinaspider"
-version = "0.3.3"
+version = "0.4.0"
 description = ""
 authors = ["Bao Hengtao <baohengtao@users.noreply.github.com>"]
 
@@ -22,6 +22,7 @@ SQLAlchemy-Utils = "^0.37.8"
 bs4 = "^0.0.1"
 tqdm = "^4.62.2"
 click = "^8.0.1"
+pretty-errors = "^1.2.24"
 
 
 [tool.poetry.dev-dependencies]
