--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ bs4 = "^0.0.1"
 tqdm = "^4.62.2"
 click = "^8.0.1"
 pretty-errors = "^1.2.24"
+typer = "^0.4.0"
+cooper-util = "^0.1.0"
 
 
 [tool.poetry.dev-dependencies]
@@ -35,7 +37,7 @@ python-lsp-server = "^1.2.1"
 Sphinx = "^4.1.2"
 
 [tool.poetry.scripts]
-sinaspider = 'sinaspider.script:script'
+sinaspider = 'sinaspider.script:app'
 
 [build-system]
 requires = ["poetry-core>=1.0.0", 'setuptools', 'wheel']
