--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ description = ""
 authors = ["Bao Hengtao <baohengtao@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 requests = "^2.26.0"
-lxml = "^4.6.3"
+lxml = "*"
 loguru = "^0.5.3"
 pendulum = "^2.1.2"
 psycopg2 = "^2.9.1"
@@ -25,6 +25,7 @@ click = "^8.0.1"
 pretty-errors = "^1.2.24"
 typer = "^0.4.0"
 cooper-util = "^0.1.0"
+sqlmodel = "^0.0.4"
 
 
 [tool.poetry.dev-dependencies]
