--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,22 +10,16 @@ requests = "^2.26.0"
 lxml = "*"
 loguru = "^0.5.3"
 pendulum = "^2.1.2"
-psycopg2 = "^2.9.1"
 dataset = "^1.5.0"
 python-baseconv = "^1.2.2"
 PyExifTool = "^0.4.11"
 keyring = "^23.1.0"
-configobj = "^5.0.6"
 furl = "^2.1.2"
 requests-cache = "^0.7.4"
-SQLAlchemy-Utils = "^0.37.8"
-bs4 = "^0.0.1"
-tqdm = "^4.62.2"
-click = "^8.0.1"
-pretty-errors = "^1.2.24"
 typer = "^0.4.0"
-cooper-util = "^0.1.0"
-sqlmodel = "^0.0.4"
+rich = "^11.1.0"
+bs4 = "^0.0.1"
+psycopg2 = "^2.9.3"
 
 
 [tool.poetry.dev-dependencies]
@@ -36,6 +30,7 @@ ptpython = "*"
 jupyterlab-lsp = "*"
 python-lsp-server = "^1.2.1"
 Sphinx = "^4.1.2"
+pytest = "^6.2.5"
 
 [tool.poetry.scripts]
 sinaspider = 'sinaspider.script:app'
