--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dynamic = ["version", "description"]
 requires-python = "~=3.10"
 dependencies=[
     "requests", "pendulum", 'rich', 
-    'python-baseconv', 'PyExifTool', "lxml", 
+    'python-baseconv', 'PyExifTool==0.4.11', "lxml", 
     'keyring', 'furl', 'requests-cache',
     'typer', 'bs4', 'psycopg2', 'peewee'
 ]
