--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = ["version", "description"]
-requires-python = "~=3.10"
+requires-python = ">=3.10"
+
+#TODO: update PyExifTool
 dependencies=[
     "requests", "pendulum", 'rich==12.5.1', 
     'python-baseconv', 'PyExifTool==0.4.11', "lxml", 
