--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,9 @@ classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = ["version", "description"]
 requires-python = ">=3.10"
 
-#TODO: update PyExifTool
 dependencies=[
     "requests", "pendulum", 'rich==12.5.1', 
-    'python-baseconv', 'PyExifTool==0.4.11', "lxml", 
+    'python-baseconv', 'PyExifTool', "lxml", 
     'keyring', 'furl', 'requests-cache==0.9.3',
     'typer', 'bs4', 'psycopg2', 'peewee'
 ]
