--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,7 @@ Home = "https://github.com/baohengtao/sinaspider"
 
 [project.scripts]
 sinaspider = 'sinaspider.script:app'
+
+[tool.isort]
+multi_line_output = 5
+wrap_length = 30
