--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dynamic = ["version", "description"]
 requires-python = ">=3.10"
 
 dependencies = [
-    "requests",
+    "httpx",
     "pendulum",
     'rich==12.5.1',
     'python-baseconv',
